<resources>
  <string name="app_name">Transliterate</string>
  <string name="app_name_full">Transliterate - Meitei Mayek</string>
  
  <string name="title_activity_main">MainActivity</string>
  
  <string name="menu_home">Home</string>
  
  <string name="developed_by_1">Developed with</string>
  <string name="developed_by_2">by Gyanendro Kh</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="type_here">Type Here…</string>
  <string name="lang_eng">English</string>
  <string name="lang_mm">Meitei Mayek</string>
  <string name="transliteration">Transliteration…</string>
  <string name="menu_store">Play Store</string>
  <string name="menu_share">Share</string>
  <string name="menu_privacy">Privacy Policy</string>
  <string name="menu_about">About</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="fragment_about">About</string>
  <string name="about_app">
    "### Transliterate - Meitei Mayek\n
The app is open source. The source code can be found on [Github](https://github.com/GyanendroKh/Transliterate-Android).\n
An android app for Transliteration from English to Meitei Mayek and Meitei Mayek to English.\n
The app uses a [Tensorflow](https://tensorflow.org) Model for the transliteration. The model is converted to [TFLite](https://www.tensorflow.org/lite) for use in android.\n
A web version of this project can be found on https://transliterate.meiteimayek.tk

### Note
Here, the term referring to is [Transliteration](https://en.wikipedia.org/wiki/Transliteration) not to be confused with [Translation](https://en.wikipedia.org/wiki/Translation).

A quote from Google :
> Transliteration refers to the method of mapping from one system of writing to another based on phonetic similarity.

And we all know what Translation means.

**One thought to keep in mind.**\n
*Throughout this project Translation and Transliteration will be used interchangeably. And both will be referred to Transliteration.*

### Neural Machine Translation - Model\n
The model is initially used for Translation purpose but with some tweaking and hacking I managed to used it for Transliteration. I used a Translation model because in the context of [Deep Learning](https://en.wikipedia.org/wiki/Deep_learning), Transliteration and Translation are similar problems.\n
It is a [Seq2Seq](https://arxiv.org/abs/1703.01619) Model with [Bahdanau Attention](https://arxiv.org/pdf/1409.0473.pdf) based on [Google's Neural Machine Translation System](https://research.google/pubs/pub45610/).\n
The best part is that it is Multilingual which means that - provided enough dataset, it can transliterate from any given language to any language (by only one Model).'\n
The dataset that is used for training this model was extracted from the web via [Web Scraping](https://en.wikipedia.org/wiki/Web_scraping) and to experiment with, a small part of the dataset is generated by a [Rule based Transliteration System](https://github.com/ProjectUNBI/IyekToEng), which in the future may be excluded."\n
  </string>
  <string name="privacy_policy_content">
    "### Privacy Policy
Effective Date: November 13, 2019

This page is used to inform the application users regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.

If you choose to use our Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.

Information Collection and Use

We intentionally do not collect any personal user data. But we do use other third-party services such as Google Admob which may collect user data. We don't have any features on our server that can collect user's personal data except for the one's that they send to use the application.

Third party vendors, including Google, use cookies to serve ads based on a user's prior visits to your website or other websites.
Google's use of advertising cookies enables it and its partners to serve ads to your users based on their visit to your sites and/or other sites on the Internet.
Users may opt out of personalized advertising by visiting https://google.com/settings/ads

Service Providers

We may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
We want to inform our Service users that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Links to Other Sites

Our Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over, and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

Our Services do not address anyone under the age of 13. We do not knowingly collect personal identifiable information from children under 13.

Changes to This Privacy Policy

We may update our Privacy Policy from time to time. Thus, we advise you to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately, after they are posted on this page.

Contact Us

If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.
Email: khgyanendro77@gmail.com"
  </string>
  <string name="play_store_detail">http://play.google.com/store/apps/details?id=</string>
  <string name="error_title">Error!</string>
  <string name="error_message">The app is experiencing a problem. Please restart the application.</string>
  <string name="exit">Exit</string>
  <string name="update_title">Update Available!</string>
  <string name="update_text">A new version of the app is available.</string>
  <string name="update">Update</string>
  <string name="later">Later</string>
  <string name="finish">Finish</string>
  <string name="next">Next</string>
  <string name="prev">Prev</string>
  <string name="tut_1_title">Transliterate</string>
  <string name="tut_1">Click where it says \'Type Here…\' and start typing.\nThe transliterated sentence will be shown below automatically.</string>
  <string name="tut_2_title">Language</string>
  <string name="tut_2">The Language shown at the top left is the source language (to transliterate from) and the one that is shown at top right is the target language(to transliterate to).\nClick the button between the two to swap the language.</string>
  <string name="tut_3_title">Other Stuff</string>
  <string name="tut_3">Click the \'X\' button on the top right to clear the input.\nClick the button on the bottom right with two files on it to copy the transliterated text.</string>
  <string name="ad_id">ca-app-pub-3940256099942544~3347511713</string>
  <string name="ad_banner">ca-app-pub-3940256099942544/6300978111</string>
  <string name="ad_inter">ca-app-pub-3940256099942544/1033173712</string>
  <string name="menu_tut">Tutorial</string>
</resources>
