<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">
  
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_home"
      android:title="@string/menu_home" />
    
    <item
      android:id="@+id/nav_store"
      android:icon="@drawable/ic_get_app"
      android:title="@string/menu_store" />
  
    <item
      android:id="@+id/nav_tut"
      android:icon="@drawable/ic_assignment"
      android:title="@string/menu_tut" />
    
    <item
      android:id="@+id/nav_share"
      android:icon="@drawable/ic_share"
      android:title="@string/menu_share" />
    
    <item
      android:id="@+id/nav_privacy"
      android:icon="@drawable/ic_fingerprint"
      android:title="@string/menu_privacy" />
    
    <item
      android:id="@+id/nav_about"
      android:icon="@drawable/ic_apps"
      android:title="@string/menu_about" />
  </group>
</menu>
