<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">
  
  <fragment
    android:id="@+id/nav_home"
    android:name="com.meiteimayek.transliterate.ui.HomeFragment"
    android:label="@string/app_name"
    tools:layout="@layout/fragment_home" />
  
  <fragment
    android:id="@+id/nav_privacy"
    android:name="com.meiteimayek.transliterate.ui.PrivacyFragment"
    android:label="@string/privacy_policy"
    tools:layout="@layout/fragment_privacy" />
  
  <fragment
    android:id="@+id/nav_about"
    android:name="com.meiteimayek.transliterate.ui.AboutAppFragment"
    android:label="@string/fragment_about" />

</navigation>
