<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/res-auto"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/ad_view">
    
    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      
      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/trans_title_pad_horizontal"
        android:paddingTop="@dimen/trans_title_pad_vertical"
        android:paddingEnd="@dimen/trans_title_pad_horizontal"
        android:paddingBottom="@dimen/trans_title_pad_vertical">
        
        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/trans_source"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/lang_eng"
          android:textSize="@dimen/title_font"
          app:fontFamily="@font/amarante"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
        
        <androidx.appcompat.widget.AppCompatImageButton
          android:id="@+id/trans_swap_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_centerVertical="true"
          android:background="?attr/selectableItemBackground"
          android:padding="@dimen/img_pad"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/ic_compare_arrows" />
        
        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/trans_target"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_centerVertical="true"
          android:text="@string/lang_mm"
          android:textSize="@dimen/title_font"
          app:fontFamily="@font/amarante"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
      
      </androidx.constraintlayout.widget.ConstraintLayout>
      
      <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPaddingBottom="@dimen/card_pad_vertical"
        app:contentPaddingLeft="@dimen/card_pad_horizontal"
        app:contentPaddingRight="@dimen/card_pad_horizontal"
        app:contentPaddingTop="@dimen/card_pad_vertical">
        
        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          
          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/trans_source_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/lang_eng"
            android:textSize="@dimen/subtitle_font"
            android:textStyle="bold"
            app:fontFamily="@font/amarante"
            app:layout_constraintBottom_toTopOf="@+id/trans_source_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
          
          <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/trans_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/img_pad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_clear" />
          
          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trans_source_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trans_source_title"
            android:background="@android:color/transparent"
            android:fontFamily="serif"
            android:hint="@string/type_here"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="4"
            android:textSize="@dimen/subtitle_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trans_clear" />
        
        </androidx.constraintlayout.widget.ConstraintLayout>
      
      </com.google.android.material.card.MaterialCardView>
      
      <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/target_card_margin"
        app:contentPaddingBottom="@dimen/card_pad_vertical"
        app:contentPaddingLeft="@dimen/card_pad_horizontal"
        app:contentPaddingRight="@dimen/card_pad_horizontal"
        app:contentPaddingTop="@dimen/card_pad_vertical">
        
        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          
          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/trans_target_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/lang_mm"
            android:textSize="@dimen/subtitle_font"
            android:textStyle="bold"
            app:fontFamily="@font/amarante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
          
          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/trans_target_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="serif"
            android:gravity="center_vertical"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:text="@string/transliteration"
            android:textSize="@dimen/subtitle_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trans_target_title" />
          
          <ProgressBar
            android:id="@+id/trans_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/trans_copy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trans_target_text" />
          
          <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/trans_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/img_pad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_content_copy" />
        
        </androidx.constraintlayout.widget.ConstraintLayout>
      
      </com.google.android.material.card.MaterialCardView>
    
    </androidx.appcompat.widget.LinearLayoutCompat>
  
  </ScrollView>
  
  <com.google.android.gms.ads.AdView
    android:id="@+id/ad_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/include"
    ads:adSize="BANNER"
    ads:adUnitId="@string/ad_banner" />
  
  <include
    android:id="@+id/include"
    layout="@layout/developed_by"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true" />

</RelativeLayout>
